created express server

--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "",
+  "description": "## User Story AS A small business owner I WANT to be able to write and save notes SO THAT I can organize my thoughts and keep track of tasks I need to complete",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
-  }
+    "express": "^4.17.3"
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kaylaanngrace/NoteTaker-ByMakWils.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/kaylaanngrace/NoteTaker-ByMakWils/issues"
+  },
+  "homepage": "https://github.com/kaylaanngrace/NoteTaker-ByMakWils#readme"
 }
